# fastapi_template

./: .env.example  .gitignore  Dockerfile  cookiecutter.json  docker-compose.yml  pyproject.toml  ruff.toml
alembic/: env.py
app/: constants.py  consumer.py  main.py  worker.py
app/api/: router.py
app/api/dependencies/: core.py
app/api/v1/: __init__.py
app/config/: __init__.py  application.py  celery.py  database.py  kafka.py  sentry.py
app/core/config/: __init__.py  celery.py  database.py  kafka.py
app/core/db/: __init__.py  repository.py  session.py
app/core/models/: base.py
app/db/: __init__.py  session.py
app/db/repositories/: __init__.py  base_repository.py
app/models/: __init__.py  base.py
app/services/: kafka.py  sentry.py
app/tasks/: simple_task.py
app/utils/: logging.py  sentry.py  trace.py
tests/: conftest.py
tests/integration/: test_healthz.py
{{cookiecutter.repo_name}}/: .dockerignore  .env.example  README.md  docker-compose.yml  pyproject.toml
{{cookiecutter.repo_name}}/alembic/: env.py
{{cookiecutter.repo_name}}/app/: consumer.py  main.py
{{cookiecutter.repo_name}}/app/api/: __init__.py  router.py
{{cookiecutter.repo_name}}/app/core/config/: application.py  celery.py  kafka.py  sentry.py
{{cookiecutter.repo_name}}/app/core/models/: __init__.py  base.py
{{cookiecutter.repo_name}}/app/services/: kafka.py  sentry.py  unit_of_work.py
{{cookiecutter.repo_name}}/app/tasks/: simple_task.py
{{cookiecutter.repo_name}}/app/utils/: structlog.py
{{cookiecutter.repo_name}}/app/utils/middlewares/: http_middleware.py
{{cookiecutter.repo_name}}/scripts/: test_send_msg_to_kafka.py
{{cookiecutter.repo_name}}/tests/: conftest.py  utils.py
